--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
-    compile project(':lib_reusespinner')
+    compile project(':reuse-spinner')
 }
